Fixing language files

--- a/language/en-GB/en-GB.plg_content_bbopengraph.ini
+++ b/language/en-GB/en-GB.plg_content_bbopengraph.ini
@@ -35,7 +35,9 @@ PLG_CONTENT_BBOPENGRAPH_DESC="<style type="_QQ_"text/css"_QQ_">
 	    margin-bottom:0;
 	    padding-bottom:0;
 	}
+	.clear {
+		clear:left;
+	}
 	</style>
-<img src="_QQ_"http://betweenbrain.com/images/logo.png />
-<p>Plugin for adding basic Open Graph meta information to your Joomla! site.</p>
-Don't forget to enable and publish this plugin in the <a href="_QQ_"index.php?option=com_plugins"_QQ_">Plug-in Manager</a></p>"
+<img src="_QQ_"http://betweenbrain.com/images/logo.png"_QQ_" />
+<p class="_QQ_"clear"_QQ_">Plugin for adding basic Open Graph meta information to your Joomla! site.</p>"
