Language file updates. Version bump.

--- a/language/en-GB/en-GB.plg_content_bbopengraph.ini
+++ b/language/en-GB/en-GB.plg_content_bbopengraph.ini
@@ -39,5 +39,6 @@ PLG_CONTENT_BBOPENGRAPH_DESC="<style type="_QQ_"text/css"_QQ_">
 		clear:left;
 	}
 	</style>
-<img src="_QQ_"http://betweenbrain.com/images/logo.png"_QQ_" />
-<p class="_QQ_"clear"_QQ_">Plugin for adding basic Open Graph meta information to your Joomla! site.</p>"
+<a href="_QQ_"http://betweenbrain.com/"_QQ_" target="_QQ_"_blank"_QQ_"><img src="_QQ_"http://betweenbrain.com/images/logo.png"_QQ_" /></a>
+<p class="_QQ_"clear"_QQ_">A simple plugin for implementing the Open Graph protocol on your Joomla! website.</p>
+<p>Learn more about The Open Graph Protocol at <a href="_QQ_"http://ogp.me/"_QQ_" target="_QQ_"_blank"_QQ_">http://ogp.me/</a>.</p>"
